crates/cargo-manifest/tests/snapshots/autolib__legacy_lib_with_new_edition.snap
---
source: tests/autolib.rs
expression: error
---
can't find library, rename file to `src/lib.rs` or specify lib.path
